# AMLDigitalFPV

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  README_zhCN.md  amldigitalfpv.sh
src/: Makefile  aml.c  aml.h  audio_receiver.cpp  audio_receiver.h  build.sh  dvr_recorder.cpp  dvr_recorder.h  frame_ring_buffer.h  gstrtpreceiver.cpp  gstrtpreceiver.h  kv_config.cpp  kv_config.h  main.cpp  minimp4.h  scheduling_helper.hpp  spdlog_wrapper.cpp  spdlog_wrapper.h  util.c  util.h  video_latency_notes.md
systemd/: amldigitalfpv.service
